--- a/templates/Officer/CaseStatements.html
+++ b/templates/Officer/CaseStatements.html
@@ -225,7 +225,7 @@
                                         <div class="col-sm-6 ">
                                             
                                                 <div class="form-group label-floating">
-                                                     <label>Accused Statement </label>
+                                                     <label>Accused Statement (If Criminal Case) </label>
                                                  <input class="form-control" type="text" name="AccusedStmnt"   />
 
 
