fixed accepting input bug

--- a/templates/Judge/JudgeAccount.html
+++ b/templates/Judge/JudgeAccount.html
@@ -215,7 +215,7 @@
                                          <div class="col-sm-6">
                                                 <div class="form-group label-floating">
                                                      <label>Name</label>
-                                                        <input class="form-control" placeholder="{{Pc.Name}}" name="VictimStmnt" required=""  />
+                                                        <input class="form-control" placeholder="{{Pc.Name}}" name="VictimStmnt" readonly=""  />
                                                     </div>
                                                 </div>
                                         </div>
@@ -226,7 +226,7 @@
                                             
                                                 <div class="form-group label-floating">
                                                      <label>Source of Recruitment</label>
-                                                 <input class="form-control" placeholder="{{Pc.Recruit_Src}}" name="AccusedStmnt"   />
+                                                 <input class="form-control" placeholder="{{Pc.Recruit_Src}}" name="AccusedStmnt"  readonly="" />
 
 
                                                 </div>
@@ -235,7 +235,7 @@
                                             
                                                 <div class="form-group label-floating">
                                                      <label>Appointment Date</label>
-                                                 <input class="form-control" placeholder="{{Pc.Apptmnt_Date}}" name="AccusedStmnt"   />
+                                                 <input class="form-control" placeholder="{{Pc.Apptmnt_Date}}" name="AccusedStmnt" readonly=""  />
 
 
                                                 </div>
