--- a/templates/Clients/ClientAccount.html
+++ b/templates/Clients/ClientAccount.html
@@ -220,7 +220,7 @@
                                          <div class="col-sm-6">
                                                 <div class="form-group label-floating">
                                                      <label>Name</label>
-                                                        <input class="form-control" placeholder="{{Pc.Name}}" name="VictimStmnt" required=""  />
+                                                        <input class="form-control" placeholder="{{Pc.Name}}" name="VictimStmnt" readonly=""  />
                                                     </div>
                                                 </div>
                                         </div>
@@ -231,7 +231,7 @@
                                             
                                                 <div class="form-group label-floating">
                                                      <label>Date Of Birth </label>
-                                                 <input class="form-control" placeholder="{{Pc.DOB}}" name="AccusedStmnt"   />
+                                                 <input class="form-control" placeholder="{{Pc.DOB}}" name="AccusedStmnt"  readonly=""  />
 
 
                                                 </div>
