Added image to local dir

--- a/templates/index.html
+++ b/templates/index.html
@@ -299,7 +299,7 @@
 
           <!--Second column-->
           <div class="col-md-4 flex-center" style="flex-direction: column;">
-            <img style="width: 60%;" src="https://i.imgur.com/6jR0O63.png" alt="MDB Magazine Template displayed on iPhone" class="z-depth-0 img-fluid">
+            <img style="width: 60%;" src="static/static123/img/appimg.png" alt="MDB Magazine Template displayed on iPhone" class="z-depth-0 img-fluid">
             <div style="height:15px">&nbsp;</div>
           </div>
           <!--/Second column-->
