corrected homepage links

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about" >About Honour</a>
@@ -55,7 +55,7 @@
             <a class="nav-link" href="#explained" >More on Honour</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#features" target="_blank">Features</a>
+            <a class="nav-link" href="#features">Features</a>
           </li>
         </ul>
 
@@ -245,7 +245,7 @@
       <hr class="my-5">
 
       <!--Section: Not enough-->
-      <section id="about" class="mt-5 wow fadeIn">
+      <section id="features" class="mt-5 wow fadeIn">
 
         <h2 class="my-5 h3 text-center">Features</h2>
 
