corrected login link in #about

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
             <!-- CTA -->
             <a href="/Registeras" class="custom-btn btn btn-indigo btn-md">Signup
             </a>
-            <a thref="/Login" class="custom-btn btn btn-indigo btn-md">Login
+            <a href="/Login" class="custom-btn btn btn-indigo btn-md">Login
             </a>
 
           </div>
